Changing to nord theme, added animations

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
-        <title>Jov's Personal Web</title>
+        <title>Jov's Personal Website</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Chungus</a></h1>
+        <h1 id="main">
+            Welcome!
+        </h1>
     </body>
 </html>
