Making it work idk

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <html>
     <head>
-        <title>Jov's Personal Website</title>
+        <title>Homepage</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1 id="main">
+        <div id="header">
+            My Socials:
+            <!-- figure out how to align the icons -->
+            <a href="https://www.github.com/jov-1024">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg" width="36px"> 
+            </a>
+        </div>
+    </br>
+        <p id="main">
             Welcome!
-        </h1>
+        </p>
+        <div id="main_text">
+            Hello There!
+        <br>
+            Welcome to my website. 
+            I'm Aaditya, a HS graduate from India.
+        <br>
+            Will soon begin my undergrad in Computer Science.
+            I'm super interested in linux and low level programming.
+        </div>
     </body>
 </html>
